temp fix for scroll jumping

--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ header {
     color: var(--headerFontColor);
     z-index: 1;
     box-shadow: 0 var(--headerShadow) var(--headerShadow) var(--shadowColor);
+    margin-bottom: 1em;
 }
 header h1 {
     margin: 0;
